[gd_scene load_steps=42 format=3 uid="uid://bmt6ylwymfqlv"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_l1ch3"]
[ext_resource type="Texture2D" uid="uid://blvwnwppofxot" path="res://scenes/vagabond-idle.png" id="2_4m1oa"]
[ext_resource type="Texture2D" uid="uid://c1cskqbuxbwlf" path="res://scenes/vagabond-run.png" id="3_cy2sn"]
[ext_resource type="Script" path="res://scripts/lifeBar.gd" id="4_21eyi"]
[ext_resource type="Texture2D" uid="uid://c2ctrn864trx1" path="res://scenes/vagabond-jump.png" id="4_qgcio"]
[ext_resource type="Texture2D" uid="uid://58t3svml6vpf" path="res://scenes/vagabond-attack.png" id="5_mldet"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cxouf"]
atlas = ExtResource("2_4m1oa")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e18t7"]
atlas = ExtResource("2_4m1oa")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rlyd0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxouf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e18t7")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_oqqs5"]
atlas = ExtResource("3_cy2sn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j56pf"]
atlas = ExtResource("3_cy2sn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwf8f"]
atlas = ExtResource("3_cy2sn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuqsk"]
atlas = ExtResource("3_cy2sn")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_457yi"]
atlas = ExtResource("3_cy2sn")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_thbmc"]
atlas = ExtResource("3_cy2sn")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nw3o"]
atlas = ExtResource("3_cy2sn")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rx8r"]
atlas = ExtResource("3_cy2sn")
region = Rect2(64, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_8uc3d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqqs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j56pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwf8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuqsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_457yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thbmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nw3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rx8r")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8o5ga"]
atlas = ExtResource("4_qgcio")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dil7a"]
atlas = ExtResource("4_qgcio")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5m6y"]
atlas = ExtResource("4_qgcio")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vdhq5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o5ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dil7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5m6y")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0f7n6"]
atlas = ExtResource("5_mldet")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2o2n"]
atlas = ExtResource("5_mldet")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdj0e"]
atlas = ExtResource("5_mldet")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpvam"]
atlas = ExtResource("5_mldet")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydhyc"]
atlas = ExtResource("5_mldet")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_434wl"]
atlas = ExtResource("5_mldet")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_50cm7"]
atlas = ExtResource("5_mldet")
region = Rect2(256, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gqs5"]
atlas = ExtResource("5_mldet")
region = Rect2(384, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rim31"]
atlas = ExtResource("5_mldet")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqvor"]
atlas = ExtResource("5_mldet")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1cyb"]
atlas = ExtResource("5_mldet")
region = Rect2(256, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v7av"]
atlas = ExtResource("5_mldet")
region = Rect2(384, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr1hq"]
atlas = ExtResource("5_mldet")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ka86"]
atlas = ExtResource("5_mldet")
region = Rect2(128, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oujl6"]
atlas = ExtResource("5_mldet")
region = Rect2(256, 192, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_eu31i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f7n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2o2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdj0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpvam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydhyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_434wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50cm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gqs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rim31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqvor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1cyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v7av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr1hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ka86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oujl6")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a44cj"]
size = Vector2(20, 23.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ww7vc"]
size = Vector2(22, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cs3ks"]
size = Vector2(82, 23)

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_l1ch3")

[node name="Idle" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -20)
sprite_frames = SubResource("SpriteFrames_rlyd0")
autoplay = "default"
frame_progress = 0.935337
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://assets/vagabond/vagabond-idle.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": false,
"slice_section": false
}

[node name="Run" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(3, -20)
sprite_frames = SubResource("SpriteFrames_8uc3d")
frame_progress = 0.664137
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://assets/vagabond/vagabond-run.aseprite"
}

[node name="Jump" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_vdhq5")
frame_progress = 0.880017
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://assets/vagabond/vagabond-jump.aseprite"
}

[node name="Attack" type="AnimatedSprite2D" parent="."]
light_mask = 2
visibility_layer = 8
texture_filter = 1
position = Vector2(-34, -52)
sprite_frames = SubResource("SpriteFrames_eu31i")
frame_progress = 0.327529
centered = false
offset = Vector2(2.08165e-12, 2.08165e-12)
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://assets/vagabond/vagabond-attack.aseprite"
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(0, 0.499999)
scale = Vector2(1, 1.15)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="LifeBar" type="Line2D" parent="."]
light_mask = 16
visibility_layer = 16
position = Vector2(-10, -15)
scale = Vector2(0.8, 0.333334)
points = PackedVector2Array(0, 0, 25, 0)
width = 5.0
default_color = Color(0.45098, 0.811765, 0.184314, 1)
script = ExtResource("4_21eyi")

[node name="InvincibilitySpan" type="Timer" parent="LifeBar"]
wait_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 0.375)
shape = SubResource("RectangleShape2D_a44cj")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_ww7vc")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(-34, -52)
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(33, 52)
shape = SubResource("RectangleShape2D_cs3ks")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exit"]
[connection signal="timeout" from="LifeBar/InvincibilitySpan" to="LifeBar" method="_on_invincibility_span_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="on_body_entered_to_slash"]
[connection signal="body_exited" from="Area2D2" to="." method="on_body_exited_slash"]
